--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 /* DEFAULT SETTINGS */
 
+@font-face {
+  font-family: "ubuntu";
+  src: url(Fonts/Ubuntu-Medium.ttf);
+}
+
+@font-face {
+  font-family: "ubuntu-light";
+  src: url(Fonts/Ubuntu-Light.ttf);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -11,8 +21,10 @@ html {
 }
 
 body {
-  font: 1.6rem Arial;
+  font: 1.6rem "ubuntu";
   height: 100%;
+  color: white;
+  background-color: #2d2f31;
 }
 
 #root {
