--- a/src/Components/Header.css
+++ b/src/Components/Header.css
@@ -1,6 +1,6 @@
 .header {
   padding: 2rem 0;
-  margin: 0 10rem;
+  margin-bottom: 7rem;
   display: flex;
   justify-content: space-between;
   border-bottom: 0.1rem solid white;
